# PD_AI_AGENT

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
designs/spm/: README.md
docs/: PROJECT_JOURNAL.md  pd_agent_explained.md  setup.md
src/pd_agent/: __init__.py  __main__.py  cli.py  config.py  explain.py
src/pd_agent/flow/: __init__.py  models.py  runner.py
src/pd_agent/llm/: __init__.py  anthropic.py  provider.py
src/pd_agent/rag/: __init__.py  chunker.py  loaders.py  types.py
tests/: test_cli.py  test_config.py  test_explain.py  test_explain_live.py  test_flow_models.py  test_integration_openlane.py  test_llm.py  test_rag_chunker.py  test_rag_loaders.py  test_rag_types.py  test_runner.py  test_smoke.py
tests/fixtures/: spm_metrics.json
tests/fixtures/rag/: simple.md
