[project]
name = "pd-agent"
version = "0.2.0"
description = "AI agent for open-source semiconductor physical design flow orchestration"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Nithin Raj Kore" },
]
keywords = ["eda", "physical-design", "openlane", "openroad", "ai-agent", "vlsi"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.15",
    "rich>=13.9",
    "anthropic>=0.96.0",
    "voyageai>=0.3.7",
    "chromadb>=1.5.8",
    "cohere>=6.1.0",
    "rank-bm25>=0.2.2",
    "pymupdf4llm>=1.27.2.2",
    "trafilatura>=2.0.0",
]

[project.scripts]
pd-agent = "pd_agent.cli:app"

[project.urls]
Homepage = "https://github.com/nithinrajkore/PD_AI_AGENT"
Repository = "https://github.com/nithinrajkore/PD_AI_AGENT"
Issues = "https://github.com/nithinrajkore/PD_AI_AGENT/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pd_agent"]

# -------------------- Ruff (lint + format) --------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow `assert` in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------- Pytest --------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pd_agent",
    "--cov-report=term-missing",
]
markers = [
    "integration: real-OpenLane end-to-end tests (opt in with `-m integration`)",
]
